@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-06-27T08:24:27Z",
-  "count_outdated" : 278,
-  "uniques_outdated" : 166,
-  "count" : 279,
-  "uniques" : 167,
+  "timestamp" : "2022-07-01T16:28:03Z",
+  "count_outdated" : 279,
+  "uniques_outdated" : 167,
+  "count" : 280,
+  "uniques" : 168,
   "clones" : [
     {
-      "timestamp": "2022-06-14T00:00:00Z",
+      "timestamp": "2022-07-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
